grouped selectors related to main, logo anchor fix, nav spacing tweak
nested home class into the main tag selector. changed logo anchor size
and moved background image into anchor. fixed nav spacing.

--- a/css/styles.less
+++ b/css/styles.less
@@ -48,6 +48,13 @@ main {
   height:     100%;
   width:      100%;
   overflow:   hidden;
+  /* ///////////////////////////////// page specific ///////////////////////////////// */
+
+  /* ############################# home ############################# */
+  &.home{
+    background: @BGimage_home no-repeat 0 50%;
+    background-size: cover;
+  }
 }
 
 header, footer {
@@ -75,7 +82,7 @@ article {
     background-image: @swirls;
     background-repeat: repeat;
     background-color: white;
-    padding: 5px;
+    padding: 1%;
 }
 h1 {
   color: white;
@@ -89,16 +96,17 @@ h1 {
   /* ############################# logo ############################# */
 &.logo {
   display: inline-block;
-  background:@logo;
-  background-size: contain;
-  background-repeat: no-repeat;
+
   min-height: 50px;
   min-width: 129px;
   vertical-align: center;
   a {
+    background:@logo;
+    background-size: contain;
+    background-repeat: no-repeat;
     display: inline;
-    width:;
-    height:;
+    width:129px;
+    height:50px;
     display:block;
     text-indent:-9999px;
   }
@@ -129,13 +137,15 @@ a{
 .center-block {
   float: none;
 }
-
+.CTA_area {
+  background-color: @base_blue;
+}
 /* ############################# nav styles ############################# */
 
 nav{
   li{
     display: inline-block;
-    padding: 1% 4% 1% 4%;
+    padding: 1% 2.5% 1% 2.5%;
     text-transform: uppercase;
     vertical-align: center;
     &.active > a{
@@ -145,20 +155,4 @@ nav{
   a{
     color: grey;
   }
-}
-
-
-
-
-/* ///////////////////////////////// page specific ///////////////////////////////// */
-
-/* ############################# home ############################# */
-
-main.home{
-  background: @BGimage_home no-repeat 0 50%;
-  background-size: cover;
-}
-
-.CTA_area {
-  background-color: @base_blue;
 }
